[gd_scene load_steps=2 format=3 uid="uid://dfsrbwlqr3dcf"]

[ext_resource type="Script" path="res://menu.gd" id="1_menu"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="MainContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="MainContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.188235, 0.188235, 1)

[node name="TitleLabel" type="Label" parent="MainContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "Tower Battle"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Start Game"

[node name="HowToPlayButton" type="Button" parent="MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "How to Play"

[node name="QuitButton" type="Button" parent="MainContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="HowToPlayPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="HowToPlayPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.188235, 0.188235, 0.188235, 1)

[node name="RulesLabel" type="Label" parent="HowToPlayPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "How to Play:

Player 1:
- Q to place block
- S to shoot projectile

Player 2:
- Down Arrow to place block
- Up Arrow to shoot projectile

Rules:
- Stack blocks as high as possible
- Time your block placement perfectly
- Use projectiles to destabilize opponent's tower
- First to reach target height or last tower standing wins!

Press R to restart game at any time
Press C to quit to main menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="HowToPlayPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="pressed" from="MainContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainContainer/VBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="MainContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HowToPlayPanel/BackButton" to="." method="_on_back_button_pressed"]
